aggiunto un punto escamativo, perchè si.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,7 +33,7 @@
 
     <h2 style="text-align: center; color: rgb(200, 64, 200);">
         Inserisci i tuoi dati, in seguito compila le tabelle. <br>
-        Una volta finito riceverai un resoconto scaricabile con le informazioni relative al tuo stage.
+        Una volta finito riceverai un resoconto scaricabile con le informazioni relative al tuo stage!
     </h2>
 
     <!-- Correzione della tabella -->
