trasformazione path orario e registrator in relativo

--- a/frontend/registrator.html
+++ b/frontend/registrator.html
@@ -110,7 +110,7 @@
     <div id="carica" class="tab-content">
         
 
-    <a href="file:///C:/Users/stage/desktop/stage_zcs/home.html">
+    <a href="./index.html">
     <img src="https://img.freepik.com/vettori-premium/simbolo-della-home-page-dell-icona-per-il-sito-web_414847-462.jpg?w=360" alt="stage" class="bottone-home" style="height: 100px; width: 100; position: absolute;" />
     </a>
 
