dovrei aver ingrandito la tabella

--- a/frontend/registrator.html
+++ b/frontend/registrator.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scheda stage</title>
     <link rel="stylesheet" href="style.css">
+    <style> 
+    td.ingrandita {
+        width: 300px;  /* Larghezza della cella */
+        height: 100px; /* Altezza della cella */
+    }
+    </style>
 <script>
     function mostraDati() {
         // Recupera i dati da localStorage
