sistemazione dei giorni

--- a/frontend/registrator.html
+++ b/frontend/registrator.html
@@ -193,7 +193,7 @@ document.getElementById('giorno5_4').innerText = `${giorno5_4}`;
     <td><p id="giorno2"></p></td>
     <td><p id="giorno3"></p></td>
     <td><p id="giorno4"></p></td>
-    <td></td>
+    <td><p id="giorno5"></p></td>
     </tr>
     <th>pomeriggio</th>
     <td></td>
