stampa dei giorni(in teoria)

--- a/frontend/registrator.html
+++ b/frontend/registrator.html
@@ -196,11 +196,11 @@ document.getElementById('giorno5_4').innerText = `${giorno5_4}`;
     <td><p id="giorno5"></p></td>
     </tr>
     <th>pomeriggio</th>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
+    <td><p id="giorno1_2"></p></td>
+    <td><p id="giorno2_2"></p></td>
+    <td><p id="giorno3_2"></p></td>
+    <td><p id="giorno4_2"></p></td>
+    <td><p id="giorno5_2"></p></td>
     </tr>
 </table>
     <br>
@@ -214,18 +214,18 @@ document.getElementById('giorno5_4').innerText = `${giorno5_4}`;
         <th>Venerdì</th>
         </tr>
         <th>mattina</th>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td><p id="giorno1_3"></p></td>
+        <td><p id="giorno2_3"></p></td>
+        <td><p id="giorno3_3"></p></td>
+        <td><p id="giorno4_3"></p></td>
+        <td><p id="giorno5_3"></p></td>
         </tr>
         <th>pomeriggio</th>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td><p id="giorno1_4"></p></td>
+        <td><p id="giorno2_4"></p></td>
+        <td><p id="giorno3_4"></p></td>
+        <td><p id="giorno4_4"></p></td>
+        <td><p id="giorno5_4"></p></td>
         </tr>
     </table>
     <script>
