--- a/frontend/orario.html
+++ b/frontend/orario.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scheda stage</title>
+    <link rel="stylesheet" href="style.css">
     <style>
         body {
             font-family: 'Courier New', Courier, monospace;
@@ -74,6 +75,11 @@
     </style>
 </head>
 <body>
+    
+    <a href="./index.html">
+        <img src="https://img.freepik.com/vettori-premium/simbolo-della-home-page-dell-icona-per-il-sito-web_414847-462.jpg?w=360" alt="stage" class="bottone-home" style="height: 100px; width: 100; position: absolute;" />
+        </a>
+    
     <h1>Inserisci l'orario della tua settimana durante lo stage</h1>
 
     <!-- Tabella per visualizzare i giorni della settimana e gli orari -->
