--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,7 @@
           localStorage.setItem("cognome", cognome);
             
           // Redireziona alla pagina successiva dopo il salvataggio
-          window.location.href = "./orario.html";
+          window.location.href = "./registrator.html";
         }
     </script>
 
