--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,8 +6,14 @@
     <title>Home Page</title>
     <script>
       function salvaDati() {
-        var nome = document.getElementById("nome").value;
-        var cognome = document.getElementById("cognome").value;
+        var nome = document.getElementById("nome").value.trim();
+        var cognome = document.getElementById("cognome").value.trim();
+        console.log("Salvando dati:", nome, cognome);
+
+        if (nome === "" || cognome === "") {
+          alert("Per favore, inserisci sia il nome che il cognome.");
+          return;
+        }
 
         localStorage.setItem("nome", nome);
         localStorage.setItem("cognome", cognome);
