--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,13 +29,13 @@
 
     <br /><br />
 
-    <h2 style="text-align: center; color: rgb(255, 0, 255)">
+    <h2 class="center-magenta">
       Inserisci i tuoi dati, in seguito compila le tabelle.<br />
       Una volta finito riceverai un resoconto scaricabile con le informazioni
       relative al tuo stage!
     </h2>
 
-    <table>
+    <table class="index-table">
       <tr>
         <th style="background-color: white">Dati Stagista</th>
       </tr>
