--- a/frontend/registrator.html
+++ b/frontend/registrator.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <script>
       function salvaGiorni() {
+        //inizializzazione variabili per l'inserimento delle attività
         var ids = [
           "giorno1",
           "giorno2",
@@ -41,7 +42,7 @@
         var cognome = localStorage.getItem("cognome") || "";
         document.getElementById("utente").innerText =
           "Utente: " + nome + " " + cognome;
-
+        //assegnazione/memorizzazione attività inserita e nel caso non è stata scritta da che non è presente nessuna attività
         var giorno1 = localStorage.getItem("giorno1") || "Nessuna attività";
         var giorno2 = localStorage.getItem("giorno2") || "Nessuna attività";
         var giorno3 = localStorage.getItem("giorno3") || "Nessuna attività";
@@ -66,6 +67,7 @@
         var giorno4_4 = localStorage.getItem("giorno4_4") || "Nessuna attività";
         var giorno5_4 = localStorage.getItem("giorno5_4") || "Nessuna attività";
 
+        //stampa 
         var risultatoHTML =
           "<h3>Dati salvati:</h3>" +
           "<p><strong>1° settimana mattina:</strong></p>" +
@@ -143,7 +145,7 @@
 
         document.getElementById("risultato").innerHTML = risultatoHTML;
       }
-
+      //idk
       function showTab(tabId, btn) {
         var tabs = document.querySelectorAll(".tab-content");
         tabs.forEach(function (tab) {
@@ -184,7 +186,7 @@
     <button class="tab-button" onclick="showTab('tab2', this)">
       Seconda settimana
     </button>
-
+    <!--tabella per l'inserimento dati-->
     <div id="tab1" class="tab-content">
       <h2>1° settimana</h2>
       <table class="schedule-table">
@@ -266,6 +268,7 @@
     </div>
 
     <br /><br />
+    <!--tasti-->
     <button class="tab-button" onclick="salvaGiorni()">Salva i giorni</button>
     <button class="tab-button" onclick="mostraDati()">
       Mostra i dati salvati
