commenti su index finiti

--- a/frontend/registrator.html
+++ b/frontend/registrator.html
@@ -145,7 +145,7 @@
 
         document.getElementById("risultato").innerHTML = risultatoHTML;
       }
-      //idk
+      //Quando la pagina viene caricata, il primo tab (tab1) viene visualizzato e la funzione mostraDati() viene eseguita.
       function showTab(tabId, btn) {
         var tabs = document.querySelectorAll(".tab-content");
         tabs.forEach(function (tab) {
@@ -269,7 +269,7 @@
 
     <br /><br />
     <!--tasti-->
-    <button class="tab-button" onclick="salvaGiorni()">Salva i giorni</button>
+    <button class="tab-button" onclick="salvaGiorni()">Salva i giorni</button> 
     <button class="tab-button" onclick="mostraDati()">
       Mostra i dati salvati
     </button>
